templates/shortlink-api_template.yaml
---
# Source: shortlink-api/templates/base.yaml
apiVersion: v1
kind: Service
metadata:  
    name: release-name-shortlink-api
    labels:
      app.kubernetes.io/name: shortlink-api
      helm.sh/chart: shortlink-api-0.13.0
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/version: "1.0.0"
      app.kubernetes.io/part-of: shortlink
      track: stable
spec:
  type: ClusterIP
  ipFamilyPolicy: PreferDualStack
  ipFamilies:
    - IPv4
  ports:
    - name: http
      port: 7070
      targetPort: http
      protocol: TCP
  selector:    
    app.kubernetes.io/name: shortlink-api
    app.kubernetes.io/instance: release-name
---
# Source: shortlink-api/templates/base.yaml
---
apiVersion: v1
kind: Service
metadata:  
    name: release-name-shortlink-api-preview
    labels:
      app.kubernetes.io/name: shortlink-api
      helm.sh/chart: shortlink-api-0.13.0
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/version: "1.0.0"
      app.kubernetes.io/part-of: shortlink
      track: stable
spec:
  type: ClusterIP
  ipFamilyPolicy: PreferDualStack
  ipFamilies:
    - IPv4
  ports:
    - name: http
      port: 7070
      targetPort: http
      protocol: TCP
  selector:    
    app.kubernetes.io/name: shortlink-api
    app.kubernetes.io/instance: release-name
---
# Source: shortlink-api/templates/base.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: release-name-shortlink-api
  labels:
    app.kubernetes.io/name: shortlink-api
    helm.sh/chart: shortlink-api-0.13.0
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/part-of: shortlink
    track: stable
  annotations:
    
    
    
    

    
    
    
    
    
    
    
    
    

    
    cert-manager.io/cluster-issuer: cert-manager-production
    nginx.ingress.kubernetes.io/enable-modsecurity: "false"
    nginx.ingress.kubernetes.io/enable-opentelemetry: "true"
    nginx.ingress.kubernetes.io/enable-owasp-core-rules: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: shortlink.best
      http:
        paths:
          - path: /api(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: shortlink-api
                port:
                  number: 7070
---
# Source: shortlink-api/templates/base.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: release-name-shortlink-api
  labels:
    app.kubernetes.io/name: shortlink-api
    helm.sh/chart: shortlink-api-0.13.0
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/part-of: shortlink
    track: stable
spec:
  replicas: 3
  revisionHistoryLimit: 5
  strategy:
    canary:
      stableService: release-name-shortlink-api
      canaryService: release-name-shortlink-api-preview
      # The minimum number of pods that will be requested for each ReplicaSet
      # when using traffic routed canary. This is to ensure high availability
      # of each ReplicaSet.
      minPodsPerReplicaSet: 1
      dynamicStableScale: true
      trafficRouting:
        nginx:
          # Reference to an Ingress which has a rule pointing to the stable service (e.g. rollouts-demo-stable)
          # This ingress will be cloned with a new name, in order to achieve NGINX traffic splitting.
          stableIngress: release-name-shortlink-api
      steps:
      - setWeight: 30
      - pause:
          duration: 10
      - setWeight: 60
      - pause:
          duration: 10
      - setWeight: 100
      - pause:
          duration: 10
  selector:
    matchLabels:      
      app.kubernetes.io/name: shortlink-api
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        app.kubernetes.io/name: shortlink-api
        helm.sh/chart: shortlink-api-0.13.0
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/version: "1.0.0"
        app.kubernetes.io/part-of: shortlink
        track: stable        
        app.kubernetes.io/name: shortlink-api
        app.kubernetes.io/instance: release-name
    spec:
      terminationGracePeriodSeconds: 60
      automountServiceAccountToken: true
      hostUsers: true
      serviceAccountName: release-name-shortlink-api
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: application
        # -- Security Context policies for controller pods
        # See https://kubernetes.io/docs/tasks/administer-cluster/sysctl-cluster/ for
        # notes on enabling and using sysctls
        securityContext:
          allowPrivilegeEscalation: false
          runAsNonRoot: true
          # runAsUser is the user ID used to run the container
          runAsUser: 1000
          # runAsGroup is the primary group ID used to run all processes within any container of the pod
          runAsGroup: 1000
          # readOnlyRootFilesystem is a flag to enable readOnlyRootFilesystem for the Hazelcast security context
          readOnlyRootFilesystem: true
          capabilities:
            drop:
              - ALL
        image: "registry.gitlab.com/shortlink-org/shortlink/api:0.16.5"
        # -- Global imagePullPolicy
        # Default: 'Always' if image tag is 'latest', else 'IfNotPresent'
        # Ref: http://kubernetes.io/docs/user-guide/images/#pre-pulling-images
        imagePullPolicy: IfNotPresent
        ports:
          - name: http
            containerPort: 7070
            protocol: TCP
          - name: metrics
            containerPort: 9090
            protocol: TCP            
        resources:
          # -- We usually recommend not to specify default resources and to leave this as a conscious
          # choice for the user. This also increases chances charts run on environments with little
          # resources, such as Minikube. If you do want to specify resources, uncomment the following
          # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
          limits:
            cpu: 100m
            memory: 128Mi
          requests:
            cpu: 10m
            memory: 32Mi      
      # -- Node labels and tolerations for pod assignment
      # ref: https://kubernetes.io/docs/concepts/configuration/assign-pod-node/#nodeselector
      # ref: https://kubernetes.io/docs/concepts/configuration/assign-pod-node/#taints-and-tolerations-beta-feature
